--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 		<br>
 		<br>
 		<div>
-			<a href="https://open.spotify.com/album/5zi7WsKlIiUXv09tbGLKsE?si=pXNiXh55QGqnD94dCCvYXQ"><img src="igor.JPG" class="albums"></a>
+			<a href="https://open.spotify.com/album/5zi7WsKlIiUXv09tbGLKsE?si=pXNiXh55QGqnD94dCCvYXQ"><img src="igor.jpg" class="albums"></a>
 			<h3>IGOR</h3>
 			<p>Igor is the fifth studio album by American rapper and producer Tyler, the Creator.<br> It was released on May 17, 2019, through Columbia Records. Produced entirely by Tyler himself,<br> the album features guest appearances from Playboi Carti, Lil Uzi Vert, Solange, Kanye West, and Jerrod Carmichael.</p>
 		</div>
 		<br>
 		<br>
 		<div>
-			<a href="https://open.spotify.com/album/4hvsfS6cytmO16IfAptVA9?si=bbONXl7_TFeIpHrAVP9HxQ"><img src="apolloxxi.JPG" class="albums"></a>
+			<a href="https://open.spotify.com/album/4hvsfS6cytmO16IfAptVA9?si=bbONXl7_TFeIpHrAVP9HxQ"><img src="apolloxxi.jpg" class="albums"></a>
 			<h3>Apollo XXI</h3>
 			<p>Apollo XXI (21) is the debut studio album by American musician Steve Lacy.<br> It was released on May 24, 2019, by Three Quarter (3Qtr) and AWAL. It was preceded by the singles "N Side",<br> "Playground", and "Hate CD".The album was nominated for Best Urban Contemporary Album at the 62nd Annual Grammy Awards.</p>
 		</div>
